Implemented Register and LogIn on Backend